; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/skfp/extr_smt.c_smt_fill_manufacturer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/skfp/extr_smt.c_smt_fill_manufacturer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.s_smc = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }
%struct.smp_p_manufacturer = type { i64 }

@SMT_P_MANUFACTURER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.s_smc*, %struct.smp_p_manufacturer*)* @smt_fill_manufacturer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @smt_fill_manufacturer(%struct.s_smc* %0, %struct.smp_p_manufacturer* %1) #0 {
  %3 = alloca %struct.s_smc*, align 8
  %4 = alloca %struct.smp_p_manufacturer*, align 8
  store %struct.s_smc* %0, %struct.s_smc** %3, align 8
  store %struct.smp_p_manufacturer* %1, %struct.smp_p_manufacturer** %4, align 8
  %5 = load %struct.smp_p_manufacturer*, %struct.smp_p_manufacturer** %4, align 8
  %6 = load i32, i32* @SMT_P_MANUFACTURER, align 4
  %7 = call i32 @SMTSETPARA(%struct.smp_p_manufacturer* %5, i32 %6)
  %8 = load %struct.smp_p_manufacturer*, %struct.smp_p_manufacturer** %4, align 8
  %9 = getelementptr inbounds %struct.smp_p_manufacturer, %struct.smp_p_manufacturer* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = inttoptr i64 %10 to i8*
  %12 = load %struct.s_smc*, %struct.s_smc** %3, align 8
  %13 = getelementptr inbounds %struct.s_smc, %struct.s_smc* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = inttoptr i64 %15 to i8*
  %17 = call i32 @memcpy(i8* %11, i8* %16, i32 8)
  ret void
}

declare dso_local i32 @SMTSETPARA(%struct.smp_p_manufacturer*, i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
